# iced_app

./: Cargo.toml  README.md  config.json  db_platform
certificates/: temp_certificate.html
src/: app.rs  config.rs  db.rs  doc_gen.rs  main.rs
src/app/: messages.rs  mod.rs  state.rs  update.rs  view.rs
src/screens/: certificates.rs  classes.rs  courses.rs  groups.rs  login.rs  mod.rs  nav_menu.rs  payment.rs  profile.rs  register.rs  settings.rs  user_list.rs
