[package]
name = "iced-rs_app"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.13.1", features = ["image", "tokio"] }
iced_aw = "0.12.2"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
rusqlite = { version = "0.35.0", features = ["bundled"] }
sha2 = "0.10.9"
rfd = { version = "0.12", default-features = false, features = ["xdg-portal"] }
regex = "1.11.1"
tokio = { version = "1.45.0", features = ["rt-multi-thread", "macros", "sync", "rt", "full"] }
image = { version = "0.25.6", features = ["png" , "jpeg"] }
chrono = "0.4.41"

[target.x86_64-pc-windows-msvc]
runner = "wine"